[package]
name = "dusk-poseidon-merkle"
version = "0.1.0"
authors = ["Victor Lopez <victor@dusk.network>"]
edition = "2018"
build = "build.rs"

[dependencies]
curve25519-dalek = "1.2.3"
lazy_static = "1.4.0"

[dev-dependencies]
criterion = "0.3"
rand = "0.7.0"

[build-dependencies]
curve25519-dalek = "1.2.3"

[[bench]]
name = "merkle"
harness = false
