[package]
name = "dusk-poseidon-merkle"
version = "0.1.0"
authors = ["Victor Lopez <victor@dusk.network>"]
edition = "2018"
build = "build.rs"

[features]
big-merkle = ["rocksdb", "bincode", "serde", "bulletproofs", "merlin"]
zkproof = []

[dependencies]
lazy_static = "1.4.0"
rocksdb = { version = "0.12", optional = true }
bincode = { version = "1.2", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
merlin = { version = "1.2", optional = true }
rand = "0.7"
tempdir = "0.3"

[dependencies.curve25519-dalek]
version = "1.2"
features = ["serde", "avx2_backend"]

[dependencies.bulletproofs]
git = "https://github.com/dalek-cryptography/bulletproofs"
branch = "develop"
features = ["std", "yoloproofs", "avx2_backend"]
optional = true

[dev-dependencies]
criterion = "0.3"
sha2 = "0.8"

[build-dependencies.curve25519-dalek]
version = "1.2"
features = ["serde", "avx2_backend"]

[[bench]]
name = "hash"
harness = false

[[bench]]
name = "merkle"
harness = false

[[bench]]
name = "big_merkle"
harness = false
required-features = ["big-merkle"]
